Dunecardgame/k8s/nginx-ingress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
  labels:
    app: ingress-nginx
spec:
  selector:
    matchLabels:
      app: ingress-nginx
  template:
    metadata:
      labels:
        app: ingress-nginx
    spec:
      containers:
      - name: controller
        image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:latest
        args:
          - /nginx-ingress-controller
          - --configmap=$(POD_NAMESPACE)/nginx-template-config
        volumeMounts:
        - name: custom-config
          mountPath: /etc/nginx/custom-config
          readOnly: true
      volumes:
      - name: custom-config
        configMap:
          name: nginx-custom-config
          items:
            - key: custom-config.conf
              path: custom-config.conf
