Dunecardgame/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dune-backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dune-backend
  template:
    metadata:
      labels:
        app: dune-backend
    spec:
      containers:
      - name: dune-backend
        image: dazdd/dune-backend:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: dune-backend-service
spec:
  selector:
    app: dune-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
