Dunecardgame/k8s/backend-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: dune-backend-nodeport
spec:
  type: NodePort
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: dune-backend
