Dunecardgame/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dune-frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dune-frontend
  template:
    metadata:
      labels:
        app: dune-frontend
    spec:
      volumes:
      - name: nginx-config
        emptyDir: {}
      - name: nginx-config-template
        configMap:
          name: frontend-nginx-config
      containers:
      - name: dune-frontend
        image: dazdd/dune-frontend:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
---
apiVersion: v1
kind: Service
metadata:
  name: dune-frontend-service
spec:
  selector:
    app: dune-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
