Dunecardgame/k8s/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dune-frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dune-frontend
  template:
    metadata:
      labels:
        app: dune-frontend
    spec:
      containers:
      - name: dune-frontend
        image: dazdd/dune-frontend:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: dune-frontend-service
spec:
  selector:
    app: dune-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
