Dunecardgame/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dune-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: dune-backend-service
            port:
              number: 8000
      - path: /admin(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: dune-backend-service
            port:
              number: 8000
      - path: /static(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: dune-backend-service
            port:
              number: 8000
      - path: /media(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: dune-backend-service
            port:
              number: 8000
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: dune-frontend-service
            port:
              number: 80
